GRADLE-280 - Added Project.apply { }, which allows an external script to be applied to the current project, or to a set of arbitrary objects.

--- a/subprojects/gradle-docs/src/samples/userguide/tutorial/configureObjectUsingScript/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/tutorial/configureObjectUsingScript/build.gradle
@@ -13,12 +13,12 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.gradle.initialization
-
-import org.gradle.groovy.scripts.BasicScript
-
-abstract class SettingsScript extends BasicScript {
-    def String toString() {
-        return scriptTarget.toString()
+task configure << {
+    pos = new java.text.FieldPosition(10)
+    apply {
+        script 'other.gradle'
+        to pos
     }
+    println pos.beginIndex
+    println pos.endIndex
 }
