--- a/subprojects/gradle-docs/src/samples/java/testListener/build.gradle
+++ b/subprojects/gradle-docs/src/samples/java/testListener/build.gradle
@@ -1,3 +1,18 @@
+/*
+ * Copyright 2009 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 import static org.junit.Assert.*
 
 usePlugin 'java'
@@ -11,19 +26,19 @@ class MyListener implements org.gradle.api.tasks.testing.TestListener
 {
     def events
 
-    public void suiteStarting(org.gradle.api.tasks.testing.TestListener.Suite suite) {
+    public void beforeSuite(TestSuite suite) {
         recordAndOutput('suiteStarting: '+suite.getName())
     }
 
-    public void suiteFinished(org.gradle.api.tasks.testing.TestListener.Suite suite) {
+    public void afterSuite(TestSuite suite) {
         recordAndOutput 'suiteFinished: '+suite.getName()
     }
 
-    public void testStarting(org.gradle.api.tasks.testing.TestListener.Test test) {
+    public void beforeTest(Test test) {
         recordAndOutput 'testStarting: '+test.getName()
     }
 
-    public void testFinished(org.gradle.api.tasks.testing.TestListener.Test test, org.gradle.api.tasks.testing.TestListener.Result result) {
+    public void afterTest(Test test, TestResult result) {
         recordAndOutput 'testFinished: '+test.getName()+', result: '+result.getResultType()
     }
 
@@ -40,13 +55,13 @@ gradle.addListener(new MyListener(events: events))
 
 test.doLast {
     def expectedEvents = []
-    expectedEvents << '1suiteStarting: DoNothingTest'
+    expectedEvents << 'suiteStarting: DoNothingTest'
     expectedEvents << 'testStarting: doNothing(DoNothingTest)'
     expectedEvents << 'testFinished: doNothing(DoNothingTest), result: SUCCESS'
     expectedEvents << 'testStarting: doNothingButFail(DoNothingTest)'
     expectedEvents << 'testFinished: doNothingButFail(DoNothingTest), result: FAILURE'
     expectedEvents << 'testStarting: doNothingButError(DoNothingTest)'
-    expectedEvents << 'testFinished: doNothingButError(DoNothingTest), result: ERROR'
+    expectedEvents << 'testFinished: doNothingButError(DoNothingTest), result: FAILURE'
     expectedEvents << 'suiteFinished: DoNothingTest'
 
     assertEquals(expectedEvents, events)
