--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,18 @@
+/*
+ * Copyright 2009 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 import java.text.SimpleDateFormat
 import java.util.jar.Attributes
 import org.gradle.api.artifacts.repositories.WebdavResolver
@@ -30,11 +45,11 @@ libraries = [
         ant_junit       : 'org.apache.ant:ant-junit:1.7.0@jar',
         ant_launcher    : 'org.apache.ant:ant-launcher:1.7.0@jar',
         antlr           : 'antlr:antlr:2.7.7@jar',
-        asm_all         : 'asm:asm-all:2.2.3@jar',
+        asm_all         : 'asm:asm-all:3.2@jar',
         commons_cli     : 'commons-cli:commons-cli:1.2@jar',
         commons_io      : 'commons-io:commons-io:1.4@jar',
         dom4j           : 'dom4j:dom4j:1.6.1@jar',
-        groovy          : 'org.codehaus.groovy:groovy:1.6.4@jar',
+        groovy          : 'org.codehaus.groovy:groovy:1.7.0@jar',
         jaxen           : 'jaxen:jaxen:1.1@jar',
         jopt_simple     : 'net.sf.jopt-simple:jopt-simple:2.4.1@jar',
         jul_to_slf4j    : 'org.slf4j:jul-to-slf4j:1.5.8@jar',
