--- a/subprojects/gradle-code-quality/code-quality.gradle
+++ b/subprojects/gradle-code-quality/code-quality.gradle
@@ -1,3 +1,18 @@
+/*
+ * Copyright 2009 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 dependencies {
     groovy libraries.groovy_depends
 
@@ -5,13 +20,13 @@ dependencies {
     compile project(':plugins')
 
     compile "org.codenarc:CodeNarc:0.7@jar",
-            "org.slf4j:log4j-over-slf4j:1.5.8@jar",
+            libraries.log4j_to_slf4j,
             libraries.slf4j_api
 
-    def BEAN_UTILS = ["commons-beanutils:commons-beanutils-core:1.7.0@jar", "commons-collections:commons-collections:2.0@jar", "org.slf4j:jcl-over-slf4j:1.5.8@jar"]
+    def BEAN_UTILS = ["commons-beanutils:commons-beanutils-core:1.7.0@jar", "commons-collections:commons-collections:2.0@jar", libraries.jcl_to_slf4j]
     runtime "checkstyle:checkstyle:5.0@jar",
             libraries.antlr,
-            "org.slf4j:jcl-over-slf4j:1.5.8@jar",
+            libraries.jcl_to_slf4j,
             "com.google.collections:google-collections:0.9@jar",
             BEAN_UTILS
     
