--- a/subprojects/gradle-core/core.gradle
+++ b/subprojects/gradle-core/core.gradle
@@ -1,3 +1,18 @@
+/*
+ * Copyright 2009 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 import java.text.DateFormat
 
 usePlugin 'groovy'
@@ -12,17 +27,17 @@ configurations {
 dependencies {
     groovy libraries.groovy_depends
 
-    compile "commons-httpclient:commons-httpclient:3.0@jar", "commons-codec:commons-codec:1.2@jar", "org.slf4j:jcl-over-slf4j:1.5.8@jar"
+    compile "commons-httpclient:commons-httpclient:3.0@jar", "commons-codec:commons-codec:1.2@jar", libraries.jcl_to_slf4j
 
     compile "org.apache.ivy:ivy:2.1.0-rc2@jar", "jsch:jsch:0.1.31@jar"
 
     compile "net.sf.jopt-simple:jopt-simple:2.4.1@jar",
             libraries.ant,
             "org.apache.ant:ant-nodeps:1.7.0@jar",
-            "ch.qos.logback:logback-classic:0.9.17@jar",
+            libraries.logback_classic,
+            libraries.logback_core,
             libraries.slf4j_api,
-            "org.slf4j:jul-to-slf4j:1.5.8@jar",
-            "ch.qos.logback:logback-core:0.9.17@jar",
+            libraries.jul_to_slf4j,
             libraries.commons_io,
             "commons-lang:commons-lang:2.3@jar",
             "commons-codec:commons-codec:1.2@jar",
@@ -31,7 +46,7 @@ dependencies {
             "org.apache.maven:maven-ant-tasks:2.0.10@jar",
             libraries.asm_all
 
-    runtime "org.slf4j:log4j-over-slf4j:1.5.8@jar", "org.slf4j:jcl-over-slf4j:1.5.8@jar"
+    runtime libraries.log4j_to_slf4j, libraries.jcl_to_slf4j
 
     testCompile "xmlunit:xmlunit:1.2"
 
