--- a/subprojects/gradle-ui/ui.gradle
+++ b/subprojects/gradle-ui/ui.gradle
@@ -8,10 +8,7 @@ dependencies {
             libraries.dom4j,
             libraries.jaxen,
             libraries.commons_io,
-            libraries.logback_classic,
-            libraries.slf4j_api,
-            libraries.jul_to_slf4j,
-            libraries.logback_core
+            libraries.slf4j_api
 
     testCompile project(path: ':core', configuration: 'testFixtures')
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
@@ -29,6 +26,21 @@ task integTest(type: AntTest, dependsOn: [ rootProject.intTestImage ]) {
 
 compileJava.options.depend()
 
+/*
+ * Copyright 2009 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 //this is just to exclude integration tests
 test {
     // We set forkmode to ONCE as our tests are written in Groovy and the startup time of Groovy is significant.
