--- a/subprojects/gradle-plugins/plugins.gradle
+++ b/subprojects/gradle-plugins/plugins.gradle
@@ -21,7 +21,7 @@ dependencies {
     compile libraries.slf4j_api,
             "commons-lang:commons-lang:2.3@jar",
             libraries.commons_io,
-            "org.apache.ivy:ivy:2.1.0-rc2@jar",
+            libraries.ivy,
             "biz.aQute:bndlib:0.0.255@jar",
             "org.apache.mina:mina-core:2.0.0-M4",
             libraries.junit,
