--- a/subprojects/gradle-core/core.gradle
+++ b/subprojects/gradle-core/core.gradle
@@ -29,7 +29,7 @@ dependencies {
 
     compile "commons-httpclient:commons-httpclient:3.0@jar", "commons-codec:commons-codec:1.2@jar", libraries.jcl_to_slf4j
 
-    compile "org.apache.ivy:ivy:2.1.0-rc2@jar", "jsch:jsch:0.1.31@jar"
+    compile libraries.ivy, "jsch:jsch:0.1.31@jar"
 
     compile "net.sf.jopt-simple:jopt-simple:2.4.1@jar",
             libraries.ant,
@@ -43,7 +43,7 @@ dependencies {
             "commons-codec:commons-codec:1.2@jar",
             "commons-collections:commons-collections:3.2.1@jar",
             "slide:webdavlib:2.0@jar",
-            "org.apache.maven:maven-ant-tasks:2.0.10@jar",
+            "org.apache.maven:maven-ant-tasks:2.1.0@jar",
             libraries.asm_all
 
     runtime libraries.log4j_to_slf4j, libraries.jcl_to_slf4j
