GRADLE-254 - Updated to latest jetty, bndlib, jopt-simple and commons-lang

--- a/build.gradle
+++ b/build.gradle
@@ -48,11 +48,12 @@ libraries = [
         asm_all         : 'asm:asm-all:3.2@jar',
         commons_cli     : 'commons-cli:commons-cli:1.2@jar',
         commons_io      : 'commons-io:commons-io:1.4@jar',
+        commons_lang    : 'commons-lang:commons-lang:2.4@jar',
         dom4j           : 'dom4j:dom4j:1.6.1@jar',
         groovy          : 'org.codehaus.groovy:groovy:1.7.0@jar',
         ivy             : 'org.apache.ivy:ivy:2.1.0@jar',
         jaxen           : 'jaxen:jaxen:1.1@jar',
-        jopt_simple     : 'net.sf.jopt-simple:jopt-simple:2.4.1@jar',
+        jopt_simple     : 'net.sf.jopt-simple:jopt-simple:3.2@jar',
         slf4j_api       : 'org.slf4j:slf4j-api:1.5.10@jar',
         jcl_to_slf4j    : 'org.slf4j:jcl-over-slf4j:1.5.10@jar',
         jul_to_slf4j    : 'org.slf4j:jul-to-slf4j:1.5.10@jar',
