--- a/subprojects/gradle-jetty/jetty.gradle
+++ b/subprojects/gradle-jetty/jetty.gradle
@@ -1,3 +1,18 @@
+/*
+ * Copyright 2009 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 dependencies {
     groovy libraries.groovy_depends
 
@@ -5,16 +20,16 @@ dependencies {
     compile project(':plugins')
 
     compile libraries.slf4j_api,
-            "org.mortbay.jetty:jetty:6.1.21@jar",
-            "org.mortbay.jetty:jetty-plus:6.1.21@jar",
-            "org.mortbay.jetty:jetty-util:6.1.21@jar",
+            "org.mortbay.jetty:jetty:6.1.22@jar",
+            "org.mortbay.jetty:jetty-plus:6.1.22@jar",
+            "org.mortbay.jetty:jetty-util:6.1.22@jar",
             "javax.servlet:servlet-api:2.5@jar"
 
     runtime "org.mortbay.jetty:jsp-api-2.1:6.1.14@jar",
             "org.mortbay.jetty:jsp-2.1:6.1.14@jar",
             "org.eclipse.jdt:core:3.1.1@jar",
-            "org.mortbay.jetty:jetty-naming:6.1.21@jar",
-            "org.mortbay.jetty:jetty-annotations:6.1.21@jar"
+            "org.mortbay.jetty:jetty-naming:6.1.22@jar",
+            "org.mortbay.jetty:jetty-annotations:6.1.22@jar"
 
     testCompile project(path: ':core', configuration: 'testFixtures')
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
