--- a/subprojects/gradle-docs/src/samples/java/multiproject/buildSrc/build.gradle
+++ b/subprojects/gradle-docs/src/samples/java/multiproject/buildSrc/build.gradle
@@ -4,7 +4,11 @@ repositories {
     mavenCentral()
 }
 
+// START SNIPPET gradle-api-dependencies
 dependencies {
-    compile files(BootstrapUtil.gradleClasspath)
+    compile gradleApi()
+// END SNIPPET gradle-api-dependencies
     testCompile group: 'junit', name: 'junit', version: '4.7'
+// START SNIPPET gradle-api-dependencies
 }
+// END SNIPPET gradle-api-dependencies
