--- a/subprojects/gradle-plugins/plugins.gradle
+++ b/subprojects/gradle-plugins/plugins.gradle
@@ -26,6 +26,7 @@ dependencies {
             libraries.commons_lang,
             libraries.commons_io,
             libraries.ivy,
+            libraries.asm_all,
             "biz.aQute:bndlib:0.0.384@jar",
             "org.apache.mina:mina-core:2.0.0-RC1",
             libraries.junit,
@@ -38,4 +39,8 @@ dependencies {
 
     testCompile project(path: ':core', configuration: 'testFixtures')
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
+}
+
+test {
+    options.fork(jvmArgs: ["-ea", "-Xms128m", "-Xmx256m", '-XX:+HeapDumpOnOutOfMemoryError'])
 }
