--- a/subprojects/gradle-plugins/src/main/resources/META-INF/gradle-plugins.properties
+++ b/subprojects/gradle-plugins/src/main/resources/META-INF/gradle-plugins.properties
@@ -21,5 +21,6 @@ war=org.gradle.api.plugins.WarPlugin
 osgi=org.gradle.api.plugins.osgi.OsgiPlugin
 maven=org.gradle.api.plugins.MavenPlugin
 project-reports=org.gradle.api.plugins.ProjectReportsPlugin
+project-report=org.gradle.api.plugins.ProjectReportsPlugin
 scala=org.gradle.api.plugins.scala.ScalaPlugin
 staging=org.gradle.api.plugins.StagingPlugin
