- Updated to new snapshot

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,3 +1,18 @@
+/*
+ * Copyright 2010 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 import org.apache.ivy.plugins.resolver.*
 
 apply id: 'groovy'
@@ -13,16 +28,16 @@ repositories {
 
 dependencies {
     compile 'com.svnkit:svnkit:1.1.6', 'com.svnkit:svnkit-javahl:1.1.6'
-    compile files(org.gradle.util.BootstrapUtil.gradleClasspath)
+    compile gradleApi()
     // todo Actually it should be only groovy, but without junit we get a strange error. We need to understand this.
-    groovy files(org.gradle.util.BootstrapUtil.groovyFiles)
+    groovy localGroovy()
     testCompile "junit:junit:4.7"
 }
 
 checkstyleConfigDir = "$rootDir/../config/checkstyle"
 checkstyleConfigFileName = new File(checkstyleConfigDir, 'checkstyle.xml')
 codeNarcConfigFileName = "$rootDir/../config/codenarc.xml"
-[checkstyleMain, checkstyleTest].each { it.properties.checkstyleConfigDir = checkstyleConfigDir }
+checkstyleProperties.checkstyleConfigDir = checkstyleConfigDir
 
 task ide(type: Sync) {
     into file('lib')
