Changed samples for new Delete task.

--- a/subprojects/gradle-docs/src/samples/maven/quickstart/build.gradle
+++ b/subprojects/gradle-docs/src/samples/maven/quickstart/build.gradle
@@ -40,6 +40,6 @@ install.doLast {
     new File(buildDir, "localRepoPath.txt").write(settings.localRepository)
 }
 
-clean.doFirst {
-    ant.delete(dir: 'pomRepo')
+clean {
+    from 'pomRepo'
 }
