--- a/subprojects/gradle-plugins/src/main/resources/META-INF/gradle-plugins/osgi.properties
+++ b/subprojects/gradle-plugins/src/main/resources/META-INF/gradle-plugins/osgi.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2009 the original author or authors.
+# Copyright 2010 the original author or authors.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,4 +13,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-code-quality=org.gradle.api.plugins.quality.CodeQualityPlugin
+implementation-class=org.gradle.api.plugins.osgi.OsgiPlugin
