--- a/subprojects/gradle-plugins/src/main/resources/META-INF/gradle-plugins/project-report.properties
+++ b/subprojects/gradle-plugins/src/main/resources/META-INF/gradle-plugins/project-report.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2009 the original author or authors.
+# Copyright 2010 the original author or authors.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,14 +13,4 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-base=org.gradle.api.plugins.BasePlugin
-java=org.gradle.api.plugins.JavaPlugin
-eclipse=org.gradle.api.plugins.EclipsePlugin
-groovy=org.gradle.api.plugins.GroovyPlugin
-war=org.gradle.api.plugins.WarPlugin
-osgi=org.gradle.api.plugins.osgi.OsgiPlugin
-maven=org.gradle.api.plugins.MavenPlugin
-project-reports=org.gradle.api.plugins.ProjectReportsPlugin
-project-report=org.gradle.api.plugins.ProjectReportsPlugin
-scala=org.gradle.api.plugins.scala.ScalaPlugin
-staging=org.gradle.api.plugins.StagingPlugin
+implementation-class=org.gradle.api.plugins.ProjectReportsPlugin
