GRADLE-800 - Changed test execution so that Gradle has responsibility for forking test processes. - Temporarily ignore test options. - Switched on TestListeners for TestNG tests. - Gradle classes and classes under test are now isolated from each other in the forked test process. - Fixed a deadlock when worker process fails before it connects to the server, and after the server has started sending messages to the worker process.

--- a/subprojects/gradle-plugins/plugins.gradle
+++ b/subprojects/gradle-plugins/plugins.gradle
@@ -27,12 +27,13 @@ dependencies {
             libraries.commons_io,
             libraries.ivy,
             libraries.asm_all,
-            "biz.aQute:bndlib:0.0.384@jar",
+            'biz.aQute:bndlib:0.0.384@jar',
             libraries.junit,
-            "dom4j:dom4j:1.6.1@jar",
-            "jaxen:jaxen:1.1@jar"
+            'org.testng:testng:5.10:jdk15',
+            'dom4j:dom4j:1.6.1@jar',
+            'jaxen:jaxen:1.1@jar'
 
-    testCompile "xmlunit:xmlunit:1.2"
+    testCompile 'xmlunit:xmlunit:1.2'
 
     runtime libraries.ant_junit
 
