--- a/subprojects/gradle-docs/src/samples/java/quickstart/build.gradle
+++ b/subprojects/gradle-docs/src/samples/java/quickstart/build.gradle
@@ -1,3 +1,19 @@
+/*
+ * Copyright 2010 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 // START SNIPPET use-plugin
 apply id: 'java'
 // END SNIPPET use-plugin
@@ -30,7 +46,7 @@ dependencies {
 
 // START SNIPPET task-customisation
 test {
-    options.systemProperties['property'] = 'value'
+    systemProperties['property'] = 'value'
 }
 // END SNIPPET task-customisation
 
