--- a/subprojects/gradle-docs/src/samples/testng/suitexmlbuilder/build.gradle
+++ b/subprojects/gradle-docs/src/samples/testng/suitexmlbuilder/build.gradle
@@ -5,14 +5,7 @@ repositories {
 }
 
 dependencies {
-	testCompile module('org.testng:testng:5.8') {
-	    artifact {
-	        name = 'testng'
-	        type = 'jar'
-	        extension = 'jar'
-	        classifier = 'jdk15'
-        }
-	}
+    testCompile 'org.testng:testng:5.8:jdk15'
 }
 
 test {
