--- a/subprojects/gradle-docs/src/samples/testng/groovy-jdk15-passing/build.gradle
+++ b/subprojects/gradle-docs/src/samples/testng/groovy-jdk15-passing/build.gradle
@@ -9,14 +9,7 @@ repositories {
 dependencies {
 	groovy "org.codehaus.groovy:groovy-all:1.7.0"
 
-	testCompile module('org.testng:testng:5.8') {
-	    artifact {
-	        name = 'testng'
-	        type = 'jar'
-	        extension = 'jar'
-	        classifier = 'jdk15'
-        }
-	}
+    testCompile 'org.testng:testng:5.8:jdk15'
 }
 
 test {
