--- a/subprojects/gradle-docs/src/samples/testng/suitexmlbuilder/build.gradle
+++ b/subprojects/gradle-docs/src/samples/testng/suitexmlbuilder/build.gradle
@@ -12,8 +12,12 @@ test {
 	useTestNG() {
         suiteXmlBuilder().suite(name: 'testing-testng') {
             test (name : 'testing-testng', annotations : 'JDK', verbose:'1') {
-                classes {
-                    'class' (name: 'org.gradle.testng.UserImplTest')
+                classes([:]) {
+                    'class' (name: 'org.gradle.testng.UserImplTest') {
+                        methods([:]) {
+                            include(name: 'testOkFirstName')
+                        }
+                    }
                 }
             }
         }
