--- a/subprojects/gradle-plugins/plugins.gradle
+++ b/subprojects/gradle-plugins/plugins.gradle
@@ -33,7 +33,7 @@ dependencies {
             'dom4j:dom4j:1.6.1@jar',
             'jaxen:jaxen:1.1@jar'
 
-    testCompile 'xmlunit:xmlunit:1.2'
+    testCompile libraries.xmlunit
 
     runtime libraries.ant_junit
 
