GRADLE-800 - Set context classloader when executing tests - Merged TestSuite into Test - Changed TestListenerFormatter and TestNGListenerAdapter to handle parallel test execution - Use internal interface TestResultProcessor, rather than public TestListener, to ship test events around

--- a/subprojects/gradle-docs/src/samples/java/testListener/build.gradle
+++ b/subprojects/gradle-docs/src/samples/java/testListener/build.gradle
@@ -1,3 +1,19 @@
+/*
+ * Copyright 2010 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 import static org.junit.Assert.*
 
 apply id: 'java'
@@ -11,11 +27,11 @@ class MyListener implements org.gradle.api.tasks.testing.TestListener
 {
     def events
 
-    public void beforeSuite(TestSuite suite) {
+    public void beforeSuite(Test suite) {
         recordAndOutput('suiteStarting: '+suite.getName())
     }
 
-    public void afterSuite(TestSuite suite) {
+    public void afterSuite(Test suite) {
         recordAndOutput 'suiteFinished: '+suite.getName()
     }
 
