GRADLE-800, GRADLE-824 - More test coverage for more types of failures in JUnit/TestNG tests - Handle failures in TestNG config methods (@BeforeMethod, etc)

--- a/subprojects/gradle-plugins/plugins.gradle
+++ b/subprojects/gradle-plugins/plugins.gradle
@@ -15,6 +15,8 @@
  */
 
 
+
+
 repositories {
     mavenRepo urls: 'http://www.aQute.biz/repo'
 }
@@ -44,6 +46,6 @@ dependencies {
 }
 
 test {
-    exclude 'org/gradle/api/internal/tasks/testing/junit/ATestClassWithRunner.*'
+    exclude 'org/gradle/api/internal/tasks/testing/junit/ATestClass*.*'
     options.fork(jvmArgs: ["-ea", "-Xms128m", "-Xmx256m", '-XX:+HeapDumpOnOutOfMemoryError'])
 }
