GRADLE-800 - Added a TestResult parameter to TestListener.afterSuite(), currently always has success status. - Added JavaForkOptions.enableAssertions, defaults to true for AntTest. - Ensure every Test instance has a unique id. - Synthesise a test suite for each worker process.

--- a/subprojects/gradle-docs/src/samples/java/testListener/build.gradle
+++ b/subprojects/gradle-docs/src/samples/java/testListener/build.gradle
@@ -14,6 +14,8 @@
  * limitations under the License.
  */
 
+
+
 import static org.junit.Assert.*
 
 apply id: 'java'
@@ -31,7 +33,7 @@ class MyListener implements org.gradle.api.tasks.testing.TestListener
         recordAndOutput('suiteStarting: '+suite.getName())
     }
 
-    public void afterSuite(Test suite) {
+    public void afterSuite(Test suite, TestResult result) {
         recordAndOutput 'suiteFinished: '+suite.getName()
     }
 
