GRADLE-800 - Renamed AntTest back to Test - Renamed Test to TestDescriptor

--- a/subprojects/gradle-docs/src/samples/java/withIntegrationTests/build.gradle
+++ b/subprojects/gradle-docs/src/samples/java/withIntegrationTests/build.gradle
@@ -42,7 +42,7 @@ sourceSets {
     }
 }
 
-task integrationTest(type: AntTest, dependsOn: jar) {
+task integrationTest(type: Test, dependsOn: jar) {
     testClassesDir = sourceSets.integrationTest.classesDir
     classpath = sourceSets.integrationTest.runtimeClasspath
     systemProperties['jar.path'] = jar.archivePath
