--- a/subprojects/gradle-docs/src/samples/java/testListener/build.gradle
+++ b/subprojects/gradle-docs/src/samples/java/testListener/build.gradle
@@ -29,19 +29,19 @@ class MyListener implements org.gradle.api.tasks.testing.TestListener
 {
     def events
 
-    public void beforeSuite(Test suite) {
+    public void beforeSuite(TestDescriptor suite) {
         recordAndOutput('suiteStarting: '+suite.getName())
     }
 
-    public void afterSuite(Test suite, TestResult result) {
+    public void afterSuite(TestDescriptor suite, TestResult result) {
         recordAndOutput 'suiteFinished: '+suite.getName()
     }
 
-    public void beforeTest(Test test) {
+    public void beforeTest(TestDescriptor test) {
         recordAndOutput 'testStarting: '+test.getName()
     }
 
-    public void afterTest(Test test, TestResult result) {
+    public void afterTest(TestDescriptor test, TestResult result) {
         recordAndOutput 'testFinished: '+test.getName()+', result: '+result.getResultType()
     }
 
