--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 import java.text.SimpleDateFormat
 import java.util.jar.Attributes
 import org.gradle.api.artifacts.repositories.WebdavResolver
@@ -78,11 +79,11 @@ allprojects {
     }
 
     repositories {
-        mavenCentral()
         add(new URLResolver()) {
-            name = 'sf_gradleRepo'
-            addArtifactPattern('http://gradle.sourceforge.net/gradleRepo/[organisation]/[module](/[branch])/[type]s/[artifact]-[revision](-[classifier])(.[ext])')
+            name = 'artifactory_localRepo'
+            addArtifactPattern('http://gradle.artifactoryonline.com/gradle/ext-releases-local/[organisation]/[module](/[branch])/[type]s/[artifact]-[revision](-[classifier])(.[ext])')
         }
+        mavenRepo(urls: 'http://gradle.artifactoryonline.com/gradle/repo1')
     }
 
     version = this.version
