--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -19,11 +19,11 @@ apply id: 'groovy'
 apply id: 'code-quality'
 
 repositories {
-    mavenCentral()
     add(new URLResolver()) {
-        name = 'sf_gradleRepo'
-        addArtifactPattern('http://gradle.sourceforge.net/gradleRepo/[organisation]/[module](/[branch])/[type]s/[artifact]-[revision](-[classifier])(.[ext])')
+        name = 'artifactory_localRepo'
+        addArtifactPattern('http://gradle.artifactoryonline.com/gradle/ext-releases-local/[organisation]/[module](/[branch])/[type]s/[artifact]-[revision](-[classifier])(.[ext])')
     }
+    mavenRepo(urls: 'http://gradle.artifactoryonline.com/gradle/repo1')
 }
 
 dependencies {
